--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>TOEFL Grammar Flashcards: The Definite Article “The”</h1>
+    <h1>Grammar Flashcards: The Definite Article “The”</h1>
     
     <div class="card" id="card">
       <div class="card-inner" id="card-inner">
