--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Grammar Flashcards - Defnite Article "the" not used</title>
+  <title>Defnite Article "the" not Used</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Grammar Flashcards: Cases Definite Article “The” not Used</h1>
+    <h1>Cases Definite Article “The” not Used</h1>
     
     <div class="card" id="card">
       <div class="card-inner" id="card-inner">
