--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Cases Definite Article “The” not Used</h1>
+    <h1>Definite article “The” not used</h1>
     
     <div class="card" id="card">
       <div class="card-inner" id="card-inner">
