--- a/index.html
+++ b/index.html
@@ -3,27 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Defnite Article "the" not Used</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Definite Article "The" not Used</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>Definite article “The” not used</h1>
-    <hr>
-    <div class="card" id="card">
-      <div class="card-inner" id="card-inner">
-        <div class="card-front" id="card-front"></div>
-        <div class="card-back" id="card-back"></div>
-      </div>
-    </div>
-<hr>
-    <div class="controls">
-      <button onclick="prevCard()">⬅ Previous</button>
-      <button onclick="flipCard()">🔁 Flip</button>
-      <button onclick="nextCard()">Next ➡</button>
-    </div>
+  <h1>"The" not used</h1>
+  <div class="flashcard" id="card">
+    <div class="front"></div>
+    <div class="back"></div>
   </div>
-
+  <div class="buttons">
+    <button onclick="prevCard()">Previous</button>
+    <button onclick="flipCard()">Flip</button>
+    <button onclick="nextCard()">Next</button>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
