--- a/index.html
+++ b/index.html
@@ -3,28 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Definite Article Flashcards</title>
+  <title>When NOT to Use “the” – Grammar Flashcards</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Grammar Flashcards: When Not to Use <em>the</em></h1>
+  <h1>Grammar Flashcards: When NOT to Use <em>the</em></h1>
 
   <div class="flashcard" id="flashcard">
-    <div class="front">
-      <h2 id="ruleTitle"></h2>
-      <table>
-        <thead>
-          <tr>
-            <th>❌ Incorrect</th>
-            <th>✅ Correct</th>
-            <th>Explanation</th>
-          </tr>
-        </thead>
-        <tbody id="examples"></tbody>
-      </table>
-      <p class="rule" id="ruleText"></p>
-      <p class="exception" id="exceptionText"></p>
-    </div>
+    <h2 id="ruleTitle"></h2>
+    <table>
+      <thead>
+        <tr>
+          <th>❌ Incorrect</th>
+          <th>✅ Correct</th>
+          <th>Explanation</th>
+        </tr>
+      </thead>
+      <tbody id="examples"></tbody>
+    </table>
+    <p class="rule" id="ruleText"></p>
+    <p class="exception" id="exceptionText"></p>
   </div>
 
   <div class="buttons">
